# loopin-ambience-mode

./: .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Guide.md  README.md  audio_capture_fix.patch  audio_capture_fix_v2.patch  build.sh  cmakelists_fix.patch  hotreload_test  linux_platform_fix.patch  main_fix.patch  main_fix_v2.patch  overlay_fix.patch  test_hotreload.cpp
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build.yml  release.yml
config/: default.json
packaging/: .SRCINFO  PKGBUILD  loopin-ambience-mode.desktop  postinst
shaders/: border.frag  border.vert
src/: main.cpp  utils.h
src/audio/: AudioCapture.cpp  AudioCapture.cpp.orig  AudioCapture.cpp.rej  AudioCapture.h  FFTProcessor.cpp  FFTProcessor.h  fft_test.cpp
src/platform/: AutoStart.cpp  AutoStart.h  Hotkey.cpp  Hotkey.h  LinuxPlatform.cpp  LinuxPlatform.h  Platform.h  Tray.cpp  Tray.h  WindowsPlatform.cpp  WindowsPlatform.h
src/renderer/: BandMapper.cpp  BandMapper.h  Overlay.cpp  Overlay.cpp.orig  Overlay.h  Shader.cpp  Shader.h
src/settings/: Config.cpp  Config.h
tests/: test_hotreload.cpp
